syntax = "proto3";

package weaviategrpc;

import "google/protobuf/struct.proto";

option go_package = "github.com/weaviate/weaviate/grpc";


service Weaviate {
  rpc Search(SearchRequest) returns (SearchReply) {};
}

message SearchRequest {
  string class_name = 1;
  uint32 limit = 2;
  repeated string additional_properties = 3;
  NearVectorParams near_vector = 4;
  NearObjectParams near_object = 5;
  Properties properties = 6;
}

message Properties {
  repeated string non_ref_properties = 1;
  repeated RefProperties ref_properties = 2;
}

message RefProperties {
  string class_name = 1;
  string reference_property = 2;
  Properties linked_properties = 3;
}

message NearVectorParams {
  // protolint:disable:next REPEATED_FIELD_NAMES_PLURALIZED
  repeated float vector = 1;
  optional double certainty = 2;
  optional double distance = 3;
}

message NearObjectParams {
  string id = 1;
  optional double certainty = 2;
  optional double distance = 3;
}

message SearchReply {
  repeated SearchResult results = 1;
  float took = 2;
}

message SearchResult {
  ReturnProperties properties = 1;
  AdditionalProps additional_properties = 2;
}

message AdditionalProps {
  string id = 1;
}

message ReturnProperties {
  google.protobuf.Struct non_ref_properties = 1;
  repeated ReturnRefProperties ref_props = 2;
  string class_name = 3;
}

message ReturnRefProperties {
  ReturnProperties properties = 1;
  string prop_name = 2;
}

